@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.8.30-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-08-30 05:59:54, took 00:13:59, with 50 workers, on 4033 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2025-08-30 06:34:27, took 00:13:58, with 50 workers, on 4038 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -212,6 +212,11 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gre10.tst">conn-gre10.tst</a></td><td>success</td><td>isdn with gre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gre11.tst">conn-gre11.tst</a></td><td>success</td><td>sep with gre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gre12.tst">conn-gre12.tst</a></td><td>success</td><td>gre server</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gre13.tst">conn-gre13.tst</a></td><td>success</td><td>gre with checksum</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gre14.tst">conn-gre14.tst</a></td><td>success</td><td>gre with sequence</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gre15.tst">conn-gre15.tst</a></td><td>success</td><td>gre with key</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gre16.tst">conn-gre16.tst</a></td><td>success</td><td>gre with everything</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/conn-gre17.tst">conn-gre17.tst</a></td><td>success</td><td>gre with asymmetric key</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gtp01.tst">conn-gtp01.tst</a></td><td>success</td><td>ppp over gtp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gtp02.tst">conn-gtp02.tst</a></td><td>success</td><td>ipv4 over gtp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/conn-gtp03.tst">conn-gtp03.tst</a></td><td>success</td><td>ipv6 over gtp</td></tr>
