@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.8.30-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-08-30 06:12:44, took 00:12:19, with 50 workers, on 844 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2025-08-30 06:49:31, took 00:14:33, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
